[gd_scene load_steps=2 format=3 uid="uid://g2cxvn8ywqxqkr"]

[ext_resource type="Script" path="res://scripts/UIHud.gd" id="1_0hdxr"]

[node name="UIHud" type="CanvasLayer"]
script = ExtResource("1_0hdxr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopLeft" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -700.0
offset_right = 300.0
offset_bottom = -650.0

[node name="HeartsContainer" type="HBoxContainer" parent="Control/TopLeft"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ResetButton" type="Button" parent="Control/TopLeft"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
text = "Reset (R)"

[node name="TopRight" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0

[node name="SacrificesContainer" type="VBoxContainer" parent="Control/TopRight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopCenter" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 70.0

[node name="TimerLabel" type="Label" parent="Control/TopCenter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "02:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GateModal" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Background" type="ColorRect" parent="Control/GateModal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="Control/GateModal"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GateModal/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="GateText" type="Label" parent="Control/GateModal/Panel/VBoxContainer"]
layout_mode = 2
text = "The door demands a price. What will you give?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="Control/GateModal/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OptionAButton" type="Button" parent="Control/GateModal/Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Option A"

[node name="OptionBButton" type="Button" parent="Control/GateModal/Panel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Option B"

[node name="WinScreen" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="Control/WinScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0.5, 0, 0.8)

[node name="Panel" type="Panel" parent="Control/WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/WinScreen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="WinLabel" type="Label" parent="Control/WinScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Victory!"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Control/WinScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Time: 01:23.45"
horizontal_alignment = 1

[node name="BestTimeLabel" type="Label" parent="Control/WinScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Best: 01:20.12"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Control/WinScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="LoseScreen" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="Control/LoseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.5, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="Control/LoseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/LoseScreen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="LoseLabel" type="Label" parent="Control/LoseScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Control/LoseScreen/Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"